# ContentSearcher

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  VersionConfig.h.in
include/: ConverterJSON.h  ConverterJSON.hpp  InvertedIndex.hpp  SearchServer.hpp
jsonExamples/: config.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchServer_test.cpp  sample_test.cpp
